--- a/0x02-i18n/templates/7-index.html
+++ b/0x02-i18n/templates/7-index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Welcome to Holberton</title>
+        <title>{{ _('home_title') }}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
@@ -11,7 +11,12 @@
     <body>
         <!-- HEADER -->
 	    <header>
-            <h1>Hello world</h1>
+            <h1>{{ _('home_header') }}</h1>
+            {% if g.user %}
+            <p>{{ _('logged_in_as', username=g.user['name']) }}</p>
+            {% else %}
+            <p>{{ _('not_logged_in') }}</p>
+            {% endif %}
         </header>
     </body>
 </html>
